Rough in artwork image area

--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "react": "16.8.6",
     "react-autosuggest": "9.4.3",
     "react-dom": "16.8.6",
+    "react-intersection-observer": "^8.26.2",
     "react-linkify": "1.0.0-alpha",
     "react-redux": "5.1.1",
     "react-relay": "7.1.0",
@@ -201,6 +202,7 @@
     "underscore": "1.8.3",
     "underscore.string": "3.3.5",
     "updeep": "1.0.0",
+    "use-cursor": "^1.2.0",
     "useragent": "2.3.0",
     "uuid": "3.3.2",
     "validator": "7.0.0",
